--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 		
-	<link href="css/font-awesome.css" rel="stylesheet">
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/font-awesome.min.css" rel="stylesheet">
 
 
 	<!-- Angularjs -->
 	<!-- ========= -->
 	<script src="js/libs/angular.min.js"></script>
-	<script src="js/libs/angular-animate.min.js"></script>
+<!--	<script src="js/libs/angular-animate.min.js"></script>-->
 	<script src="js/libs/angular-resource.min.js"></script>
 	<script src="js/libs/angular-route.min.js"></script>
 	<script src="js/libs/angular-cookies.min.js"></script>
