--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,6 @@
 
 <!DOCTYPE html>
-<!--[if IE 8 ]> <html lang="en" class="ie ie8 no-js" id="ng-app" ng-app="brewTrackerApp"> <![endif]-->
-<!--[if IE 9 ]> <html lang="en" class="ie ie9 no-js" id="ng-app" ng-app="brewTrackerApp"> <![endif]-->
-<!--[if gt IE 9]><!--><html lang="en" class="no-js" id="ng-app" ng-app="brewTrackerApp"><!--<![endif]-->
+<html lang="en" class="no-js" id="ng-app" ng-app="brewTrackerApp">
 <head>
 	<meta charset="utf-8">
 	<title>Brew Tracker</title>
@@ -28,41 +26,28 @@
 
 	<!-- Brew Tracker -->
 	<script src="js/app.js"></script>
-	<!--	<script src="js/routes.js"></script> -->
-	<script src="js/menu.js"></script>
+	<script src="js/routes.js"></script> 
+	<script src="components/landing/login.js"></script>
+	<script src="components/calculators/calculators.js"></script>
+	<script src="components/menu/menu.js"></script>
 
 	<!-- Flavicon for Bookmarks and Address Bar display	 -->
-<!--	<link rel="shortcut icon" href="ui/gfx/bebu_favicon.ico?v=a001"> -->
+	<link rel="shortcut icon" href="images/brewtacker_favicon.ico"> 
 	
 </head>
-<body data-ng-controller="MenuCtrl as menu">
-
-	This is a dummy page
-	<!--<div id="bbu-shell" class="main-container">-->
- 		<!--<div class="bbu-global-ctx" data-ng-include="'/fragments/global_navigationbar.html'">-->
- 			<!-- -->
- 		<!--</div>&lt;!&ndash; /.bbu-global-ctx &ndash;&gt;-->
-   		<!--<div class="bbu-local-ctx" data-ng-view>-->
-   			<!-- -->
-   		<!--</div>&lt;!&ndash; /.bbu-local-ctx &ndash;&gt;-->
-		<!--<div id="modal-container" class="modal hidden">-->
-			<!--<div class="container">-->
-				<!--<h1>Modal</h1>-->
-			<!--</div>-->
-		<!--</div>&lt;!&ndash; /#modal-container &ndash;&gt;-->
-	<!--</div>&lt;!&ndash; ./bbu-shell &ndash;&gt;-->
-	<!--<footer class="page-footer">-->
-		<!--<div class="container body">-->
-			<!--<div class="links">-->
-				<!--&lt;!&ndash;<a href="">Contact Us</a>&ndash;&gt;-->
-				<!--<a href="#/about">About Nett</a>-->
-				<!--<a href="#/terms">Terms of Use</a>-->
-				<!--<a href="#/terms">Privacy Policy</a>-->
-			<!--</div>-->
-			<!--<div class="copyright">-->
-				<!--Copyright &copy; 2015 Nett-->
-			<!--</div>-->
-		<!--</div>-->
-	<!--</footer>-->
-</body>
+	<body data-ng-controller="MenuCtrl as menu">
+   		<div data-ng-view></div>
+		<footer class="page-footer">
+			<div class="container body">
+				<div class="links">
+					<a href="#/about">About Brew Tracker</a>
+					<a href="#/terms">Terms of Use</a>
+					<a href="#/terms">Privacy Policy</a>
+				</div>
+				<div class="copyright">
+					Copyright &copy; 2015 BrewTracker
+				</div>
+			</div>
+		</footer>
+	</body>
 </html>
