--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 	<script src="components/menu/menu.js"></script>
 
 	<!-- Flavicon for Bookmarks and Address Bar display	 -->
-	<link rel="shortcut icon" href="images/brewtacker_favicon.ico"> 
+	<link rel="shortcut icon" href="images/brewtracker-favicon.png">
 	
 </head>
 	<body data-ng-controller="MenuCtrl as menu">
