minor UI tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
-<html lang="en" class="no-js" id="ng-app" data-ng-app="brewTracker">
+<html lang="en" id="ng-app" data-ng-app="brewTracker">
 <head>
 	<meta charset="utf-8">
 	<title>Brew Tracker</title>
-	
+
 	<!-- Vieport and Rendering engine related declarations -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
