stuffed around with basic layout

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 	<link rel="shortcut icon" href="images/brewtracker-favicon.png">
 </head>
 	<body>
+		<div data-ng-include="'components/menu/menu.html'"></div>
    		<div data-ng-view></div>
 		<footer class="page-footer">
 			<div class="container body">
