--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/font-awesome.min.css" rel="stylesheet">
-
+		<link href="css/override.css" rel="stylesheet">
 
 		<!-- Angularjs -->
 		<!-- ========= -->
