writing registration message to server

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
 		<!-- Brew Tracker -->
 		<script src="js/app.js"></script>
 		<script src="js/routes.js"></script>
+		<script src="js/services/errors.js"></script>
 		<script src="js/services/registration.js"></script>
 		<script src="components/landing/registrationController.js"></script>
 		<script src="components/calculators/calculatorsController.js"></script>
